# back/src/app.js
@@ -7,6 +7,7 @@ import { swaggerOptions } from "./config/swagger.js";
 // import keystroke from "./routes/keystrokeRoute.js";
 import authRoute from "./routes/authRoute.js";
 import experimentRoute from "./routes/experimentRoute.js";
+import reportRoute from "./routes/reportRoute.js";
 const app = express();
 
 // app.use(authMiddleware);
@@ -30,6 +31,7 @@ expressJSDocSwagger(app)(swaggerOptions);
 
 // Routes
 app.use("/api", authRoute);
-app.use("/api/experiments", experimentRoute)
+app.use("/api", experimentRoute)
+app.use("/api", reportRoute)
 
 export default app;
